Informe:
	19/08/2022: Se iniciaron los puntos 1 y 2 del informe, aunque falta pulirlos.
	21/08/2022: Importantes avances en informe (Pre-Lab), falta pulirlos.
    24/08/2022: TDAs actualizados

Código:
	20/08/2022: Agregado TDA pixbit
	20/08/2022: Agregado TDA pixhex
	20/08/2022: Agregado TDA pixrgb
	20/08/2022: TDAs pixeles pulidos y comentados
	21/08/2022: Funciones TDAs agregadas al archivo de pruebas
	24/08/2022: Agregado identificador a todos los TDA
	24/08/2022: Función image agregada
	25/08/2022: Funciones bitmap?, pixmap? y pixhex? agregadas
	26/08/2022: Funciones compressed? y imgRGB->imgHEX agregadas
	26/08/2022: Funciones flipH, flipV y crop agregadas
	27/08/2022: Función histogram agregada
	27/08/2022: Función rotate90 agregada
	27/08/2022: Función compress agregada
	28/08/2022: Funciones edit, invertColorBit, invertColorRGB y adjust channel agregadas
	30/08/2022: Función image->string agregada
	31/08/2022: Función depthLayers agregada